
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int status; int (* flush_function ) (int ) ;int data; int (* output_function ) (int,int ) ;} ;
typedef TYPE_1__ mbfl_convert_filter ;


 int CK (int ) ;
 int stub1 (int,int ) ;
 int stub2 (int,int ) ;
 int stub3 (int,int ) ;
 int stub4 (int,int ) ;
 int stub5 (int ) ;

int
mbfl_filt_conv_wchar_cp50222_flush(mbfl_convert_filter *filter)
{

 if ((filter->status & 0xff00) == 0x500) {
  CK((*filter->output_function)(0x0f, filter->data));
 } else if ((filter->status & 0xff00) != 0) {
  CK((*filter->output_function)(0x1b, filter->data));
  CK((*filter->output_function)(0x28, filter->data));
  CK((*filter->output_function)(0x42, filter->data));
 }
 filter->status &= 0xff;

 if (filter->flush_function != ((void*)0)) {
  return (*filter->flush_function)(filter->data);
 }

 return 0;
}
